# denden

./: .gitignore  .goreleaser.yml  Makefile  README.md
.github/workflows/: ci-e2e.yml  ci-go.yml  ci-python.yml  ci.yml  release-pypi.yml  release.yml
cli/: go.mod  main.go  main_test.go
denden/: SKILL.md  install.sh
denden-cli/: SKILL.md
proto/: denden.proto
server/: pyproject.toml
server/src/denden/: __init__.py  __main__.py  server.py
server/src/denden/modules/: base.py
server/tests/: test_e2e.py  test_server.py
